--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,9 +1,18 @@
-#root {
+body {
+  background: radial-gradient(circle at 50% 55%,#595B7E , #000000 40%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  
+}
+
+
+/*  #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+} 
 
 .logo {
   height: 6em;
@@ -38,4 +47,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
