--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,5 +1,5 @@
 body {
-  background: radial-gradient(circle at 50% 55%,#595B7E , #000000 40%);
+  background: radial-gradient(circle at 50% 55%,#8326EF , #000000 40%);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
