--- a/client/src/components/Profile.css
+++ b/client/src/components/Profile.css
@@ -1,8 +1,17 @@
-  @import url('https://fonts.googleapis.com/css2?family=Zeyada&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap');
 
+.welcome{
+   display: flex;
+   flex-direction: row;
+   align-content: center;
+   background-color: rgb(88, 85, 85);
+}
   h2{
-    font-family: 'Zeyada', cursive; 
- }
+   font-family: 'Nanum Pen Script', cursive; }
+ h3{
+   font-family: 'Nanum Pen Script', cursive; 
+   font-size: 45px;
+}
  .profileBody{
     display: flex;
     flex-direction: column;
@@ -11,4 +20,7 @@
     text-align: left;
     font-family: 'Zeyada', cursive;
     background: #E3E3EF;
+    margin: auto;
+    max-width: 1550px;
+    
  }
