--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
 
-.logo {
-  height: 50px;
-  width: 50px;
-}
+
 
   
 .header {
@@ -18,8 +15,9 @@
   margin-bottom: 2%;
 }
 
-.logo{
- width: 100px;
+.logoimage{
+ width: 50px;
+ margin-left: 5px;
 }
 
  h1 {
@@ -34,131 +32,144 @@ nav {
   flex-direction: row;
   justify-content: space-between;
 }
-button{
-    width: 70px;
-    background-color: #000000;
-    height: 25px;
-    font-size: 0.8rem;
-    font-weight: 900;
-    color: #AFADAF;
-    text-align: center;
-    text-transform: uppercase;
-    position: relative;
-    margin: 10px;
+button {
+  width: 70px;
+  background-color: #000000;
+  height: 25px;
+  font-size: 0.8rem;
+  font-weight: 900;
+  color: #AFADAF;
+  text-align: center;
+  text-transform: uppercase;
+  position: relative;
+  margin: 10px;
 }
-button.nav {
-    width: 70px;
-    max-width: 240px;
-    background-color: #E3E3EF;
-    height: 45px;
-    padding: 4px;
-    font-size: 0.8rem;
-    font-weight: 900;
-    color: #000000;
-    text-align: center;
-    text-transform: uppercase;
-    text-decoration: none;
-    
-    position: relative;
-    margin: 10px;
-    &.nav:hover > p {
-        color: #E3E3EF;
-      }
-      &.nav > p {
-        display: flex;
-    justify-content: center;
-    align-items: center;
-        background: #595B7E;
-        color: #000000;
-        height: 30px;
-        padding:0%;
-        & span.base {
-          border: 1px solid transparent;
-        }
-      }
-      &:after,
-      &:before {
-        content: "";
-        width: 1px;
-        position: absolute;
-        height: 8px;
-        background: #0f1923;
-        left: 0;
-        top: 50%;
-        transform: translateY(-50%);
-      }
-      &:before {
-        right: 0;
-        left: initial;
-      }
-      & p {
-        margin: 0;
-        height: 54px;
-        line-height: 54px;
-        box-sizing: border-box;
-        left: 0;
-        width: 100%;
-        position: relative;
-        overflow: hidden;
-        & span.base {
-          box-sizing: border-box;
-          position: absolute;
-          z-index: 2;
-          width: 100%;
-          height: 100%;
-          left: 0;
-          border: 1px solid #E3E3EF;
-          &:before {
-            content: "";
-            width: 2px;
-            height: 2px;
-            left: -1px;
-            top: -1px;
-            background: #0f1923;
-            position: absolute;
-            transition: 0.3s ease-out all;
-          }
-        }
-        & span.bg {
-          left: -5%;
-          position: absolute;
-          background: #000000;
-          width: 0;
-          height: 100%;
-          z-index: 3;
-          transition: 0.3s ease-out all;
-          transform: skewX(-10deg);
-        }
-        & span.text {
-          z-index: 4;
-          width: auto;
-          height: auto;
-          position: center;
-          left: 0;
-          top: 0;
-          &:after {
-            content: "";
-            width: 4px;
-            height: 4px;
-            right: 0;
-            bottom: 0;
-            color: #E3E3EF;
-            background: #E3E3EF;
-            position: absolute;
-            transition: 0.3s ease-out all;
-            z-index: 5;
-          }
-        }
-      }
-      &:hover {
-        color:  #595B7E;
-        & span.bg {
-          width: 110%;
-        }
-        & span.text:after {
-          background:  #ece8e1;
-        }
-      }
-    }
 
+button.nav {
+  width: 70px;
+  max-width: 240px;
+  background-color: #E3E3EF;
+  height: 35px;
+  padding: 4px;
+  font-size: 0.8rem;
+  font-weight: 900;
+  color: #000000;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  position: relative;
+  margin: 10px;
+}
+
+button.nav:hover > p {
+  color: #E3E3EF;
+}
+
+button.nav > p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #595B7E;
+  color: #000000;
+  height: 30px;
+  padding: 0%;
+}
+
+span.base {
+  border: 1px solid transparent;
+}
+
+button.nav:after,
+button.nav:before {
+  content: "";
+  width: 1px;
+  position: absolute;
+  height: 8px;
+  background: #0f1923;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+button.nav:before {
+  right: 0;
+  left: initial;
+}
+
+button.nav > p {
+  margin: 0;
+  height: 25px;
+  line-height: 54px;
+  box-sizing: border-box;
+  left: 0;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+span.base {
+  box-sizing: border-box;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  border: 1px solid #E3E3EF;
+}
+
+span.base:before {
+  content: "";
+  width: 2px;
+  height: 2px;
+  left: -1px;
+  top: -1px;
+  background: #0f1923;
+  position: absolute;
+  transition: 0.3s ease-out all;
+}
+
+ span.bg {
+  left: -5%;
+  position: absolute;
+  background: #000000;
+  width: 0;
+  height: 100%;
+  z-index: 3;
+  transition: 0.3s ease-out all;
+  transform: skewX(-10deg);
+}
+
+ span.text {
+  z-index: 4;
+  width: auto;
+  height: auto;
+  position: center;
+  left: 0;
+  top: 0;
+}
+
+span.text:after {
+  content: "";
+  width: 4px;
+  height: 4px;
+  right: 0;
+  bottom: 0;
+  color: #E3E3EF;
+  background: #E3E3EF;
+  position: absolute;
+  transition: 0.3s ease-out all;
+  z-index: 5;
+}
+
+button.nav:hover {
+  color: #595B7E;
+}
+
+button.nav:hover > p span.bg {
+  width: 110%;
+}
+
+button.nav:hover > p span.text:after {
+  background: #ece8e1;
+}
 
