--- a/client/src/components/Profile.css
+++ b/client/src/components/Profile.css
@@ -19,6 +19,7 @@
 }
   h2{
    font-family: 'Almendra Display', cursive;
+   text-align: center;
    padding: 5px;
    margin-left: 7px;
    font-size: 35px;
