--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,10 +1,11 @@
 body {
-  background: radial-gradient(circle at 50% 55%,#8326EF , #000000 40%);
+  background: black;
+  background-image: url('/images/background (2).png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  
 }
+
 
 
 /*  #root {
