--- a/client/src/components/SearchBar.css
+++ b/client/src/components/SearchBar.css
@@ -2,8 +2,17 @@
   position: relative;
   display: flex;
   align-items: center;
-  border-radius: 40px;
-  background: #080808;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  background: linear-gradient(
+    to bottom,
+    rgba(64, 64, 64, 0) 0%,
+    rgba(0, 0, 0, .3) 10%,
+    rgb(0, 0, 0, .9) 90%,
+    rgb(0, 0, 0) 100%
+);
   height: 35px;
   
   width: 400px;
