--- a/client/src/components/SearchBar.css
+++ b/client/src/components/SearchBar.css
@@ -1,6 +1,7 @@
 .searchBox {
   position: relative;
   display: flex;
+  margin: auto;
   align-items: center;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
