--- a/client/src/components/Forms.css
+++ b/client/src/components/Forms.css
@@ -1,4 +1,4 @@
-form {
+/* form {
     display: flex;
     flex-direction: column;
     background-color: #e3e3efb0;
@@ -23,4 +23,4 @@ textarea {
 
 button {
     width: 150px;
-}
+} */
