--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -1,5 +1,5 @@
 div.loginbody{
-    display: flex;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
@@ -7,10 +7,11 @@ div.loginbody{
   font-family: 'Balsamic Sans', sans-serif;
   font-size: 16px;
   padding: 5px;
-  height: 450px;
+  height: 370px;
   margin-top: 100px;
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 80px;
   max-width: 400px;
   background-color: #E3E3EF;
 }
@@ -39,13 +40,20 @@ input.login{
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 .loginButton{
-    
     background-color: #D9D9D9;
     border: 0;
     color: #000000;
     width: 85px;
-    height: 30px;
+    height: 30px;    
+}
+
+form.formContainer {
+    margin-bottom: 10px;
+    /* padding-top: 20px; */
+}
+
+.loginButton:hover {
+    background-color: rgba(255, 255, 255, 0.61);
 }
