--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -51,7 +51,7 @@ nav {
 }
 
 button.nav {
-  width: 70px;
+  width: 75px;
   max-width: 240px;
   background-color: #E3E3EF;
   height: 35px;
@@ -65,6 +65,11 @@ button.nav {
   position: relative;
   margin: 10px;
 }
+button.nav > p > span.text {
+  font-size: 16px;
+  font-weight: 700;
+  text-transform: none;
+}
 
 button.nav:hover > p {
   color: #E3E3EF;
@@ -74,7 +79,7 @@ button.nav > p {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #595B7E;
+  background: #8426efd7;
   color: #000000;
   height: 30px;
   padding: 0%;
