--- a/client/src/components/Profile.css
+++ b/client/src/components/Profile.css
@@ -16,9 +16,10 @@
    text-shadow: 2px 2px 3px black;
   color: black;
   height: 75px;
+  font-family: 'Marcellus', serif;
 }
   h2{
-   font-family: 'Marcellus', serif;
+  
    text-align: center;
    padding: 5px;
    margin-left: 7px;
@@ -45,6 +46,8 @@ h3{
 .update{
    width: 150px;
    height: 50px;
+   background-color: black;
+   color: white;
 }
  .profileBody{
     display: flex;
