--- a/client/src/components/Profile.css
+++ b/client/src/components/Profile.css
@@ -7,23 +7,34 @@
    align-content: center;
 
 }
-.welcome{
+.welcome {
    display: flex;
    flex-direction: row;
    align-content: center;
    justify-content: space-between;
    background-color: rgb(88, 85, 85);
    text-shadow: 2px 2px 3px black;
+   text-align: center;
   color: black;
   height: 75px;
   font-family: 'Marcellus', serif;
+  border-radius: 10px;
+  padding: 10px;
+  padding-right: 40px;
+}
+.welcome > h2{
+  text-align: center;
+  color: black;
+  font-family: 'Marcellus', serif;
+  margin: 0;
+  margin-top: 10px;
 }
   h2{
-  
+   width:245px;
    text-align: center;
    padding: 5px;
    margin-left: 7px;
-   font-size: 35px;
+   font-size: 30px;
 }
 .notLoggedIn{
    display: flex;
@@ -44,6 +55,7 @@ h3{
    font-size: 30px;
 }
 .update{
+   margin-top: 10px;
    width: 150px;
    height: 50px;
    background-color: black;
